fix: updated params

--- a/deploy/service-fabric-application.parameters.devops.json
+++ b/deploy/service-fabric-application.parameters.devops.json
@@ -21,7 +21,7 @@
       "value": "#{arm.application.type.name}#"
     },
     "applicationTypeVersion": {
-      "value": "#{arm.application.type.version}#"
+      "value": "#{build.buildnumber}#"
     },
     "serviceTypeName": {
       "value": "#{arm.service.type.name}#"
