--- a/publish/infrastructure.yml
+++ b/publish/infrastructure.yml
@@ -14,7 +14,7 @@ jobs:
   pool:
     vmImage: windows-latest
 
-  environment: sftest-${{ arm.environment.name }}
+  environment: sftest-test
 
   strategy:
     runOnce:
