--- a/publish/publish-via-servicefabricdeploy.yml
+++ b/publish/publish-via-servicefabricdeploy.yml
@@ -40,7 +40,7 @@ jobs:
 
                 Write-Host "Create $(arm.project.name)-$(arm.service.name)-$(arm.environment.name)-sf-connection"
 
-                $test = az devops service-endpoint create --org $(arm.organisation.uri) --project $(arm.organisation.project.name) --service-endpoint-configuration build\service-fabric.service-connection.json
+                $test = az devops service-endpoint create --org $(arm.organisation.uri) --project $(arm.organisation.project.name) --service-endpoint-configuration $(Pipeline.Workspace)/Site/ARM Templates/service-fabric.service-connection.json
 
                 $test
 
