--- a/publish/publish-via-servicefabricdeploy.yml
+++ b/publish/publish-via-servicefabricdeploy.yml
@@ -23,29 +23,8 @@ jobs:
           - powershell: 'dir env:'
             displayName: 'Print variables'
 
-          - task: AzurePowerShell@5
-            displayName: Create service connection
-            inputs:
-              azureSubscription: $(arm.connection)
-              azurePowerShellVersion: latestVersion
-              pwsh: true
-              scriptType: inlineScript
-              inline: |
-                $connection = az devops service-endpoint show --org $(arm.organisation.uri) --project $(arm.organisation.project.name) --id $(arm.project.name)-$(arm.service.name)-$(arm.environment.name)-sf-connection
-
-                if($connection -ne $null){
-                  Write-Host "$(arm.project.name)-$(arm.service.name)-$(arm.environment.name)-sf-connection already exists"
-                  exit
-                }
-
-                Write-Host "Create $(arm.project.name)-$(arm.service.name)-$(arm.environment.name)-sf-connection"
-
-                $test = az devops service-endpoint create --org $(arm.organisation.uri) --project $(arm.organisation.project.name) --service-endpoint-configuration '$(Pipeline.Workspace)/Site/ARM Templates/service-fabric.service-connection.json'
-
-                $test
-
-          # - task: ServiceFabricDeploy@1
-          #   displayName: Deploy app
-          #   inputs:
-          #     applicationPackagePath: $(Pipeline.Workspace)/package
-          #     serviceConnectionName: $(arm.project.name)-$(arm.service.name)-$(arm.environment.name)-sf-connection
+           - task: ServiceFabricDeploy@1
+             displayName: Deploy app
+             inputs:
+               applicationPackagePath: $(Pipeline.Workspace)/package
+               serviceConnectionName: $(arm.project.name)-$(arm.service.name)-$(arm.environment.name)-sf-connection
