fix: matched params to properties

--- a/publish/publish-via-servicefabricdeploy.yml
+++ b/publish/publish-via-servicefabricdeploy.yml
@@ -31,5 +31,5 @@ jobs:
             inputs:
               applicationPackagePath: $(Pipeline.Workspace)/Site/package
               serviceConnectionName: $(arm.project.name)-$(arm.service.name)-$(arm.environment.name)-sf-connection
-              #publishProfilePath: $(Pipeline.Workspace)\Site\package-artifacts\FlexibleExample.ServiceFabric\ApplicationParameters\cloud.xml
-              applicationParameterPath: $(Pipeline.Workspace)\Site\package-artifacts\FlexibleExample.ServiceFabric\PublishProfiles\cloud.xml
+              applicationParameterPath: $(Pipeline.Workspace)\Site\package-artifacts\FlexibleExample.ServiceFabric\ApplicationParameters\cloud.xml
+              publishProfilePath: $(Pipeline.Workspace)\Site\package-artifacts\FlexibleExample.ServiceFabric\PublishProfiles\cloud.xml
