--- a/publish/publish-via-servicefabricdeploy.yml
+++ b/publish/publish-via-servicefabricdeploy.yml
@@ -35,5 +35,5 @@ jobs:
               publishProfilePath: $(Pipeline.Workspace)\Site\package-artifacts\FlexibleExample.ServiceFabric\PublishProfiles\cloud.xml
               unregisterUnusedVersions: true
               #overwriteBehavior: 'SameAppTypeAndVersion'
-              #overwriteBehavior: 'Always'
+              overwriteBehavior: 'Always'
               #overwriteBehavior: 'Never'
